2005-04-14  Abduxukur Abdurixit <abduxukur.abdurixit@t-systems.ch>

	* configure.in: Added "ug" to ALL_LINGUAS.

2005-04-08  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:  Define MOZILLA_INTERNAL_API, which is necessary since
	mozilla 1.8b2, because Yelp uses internal strings.
	* src/yelp-gecko-utils.cpp: Include config.h here.
	Fixes bug #173053.

2005-04-01  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-03-31  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/yelp-db-pager.c: (walker_walk_xml):
	* src/yelp-io-channel.c:
	* src/yelp-man-parser.c: (parser_escape_tags):
	* src/yelp-toc-pager.c: (toc_process_pending):
	* src/yelp-window.c: (window_populate), (window_do_load_pager),
	(pager_finish_cb):
	* src/yelp-xslt-pager.c: (xslt_yelp_cache):

	Don't use C++ comments in C files. Fixes the build with
	--enable-debug.

2005-03-10  Christian Persch  <chpe@cvs.gnome.org>

	* .cvsignore:
	R INSTALL:
	* autogen.sh:
	* configure.in:
	* data/.cvsignore:
	* po/POTFILES.in:
	* src/.cvsignore:
	* src/Makefile.am:
	* stylesheets/.cvsignore:

	Update the build system, and add missing files to .cvsignore:s.
	Remove not distributed file from POTFILES.in. From bug #169316.

2005-04-06  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	- yelp-uri has been dead for a while, no need to link it in

	* src/yelp-main.c:
	- Reverted #168262, fixing #169160

2005-02-23  Paolo Borelli  <pborelli@katamail.com>

	* src/yelp-main.c (main): do not leak display_name.

2005-02-23  Kjartan Maraas  <kmaraas@gnome.org>

	* src/yelp-db-pager.c: (node_get_title):
	* src/yelp-error.c:
	* src/yelp-html-gtkhtml1.c:
	* src/yelp-html-gtkhtml2.c:
	* src/yelp-index-model.c:
	* src/yelp-info-pager.c:
	* src/yelp-main.c:
	* src/yelp-man-pager.c:
	* src/yelp-man-parser.c:
	* src/yelp-pager.c:
	* src/yelp-pregenerate.c:
	* src/yelp-settings.c: