@@ -1,3 +1,9 @@
+2005-04-30  Paolo Borelli  <pborelli@katamail.com>
+
+	yelp-bookmarks.c: constify some vars.
+	yelp-settings.c: ditto.
+	yelp-window.c: ditto.
+
 2005-04-14  Abduxukur Abdurixit <abduxukur.abdurixit@t-systems.ch>
 
 	* configure.in: Added "ug" to ALL_LINGUAS.
